<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/music_player_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/player_first_text_view"
            android:textAlignment="center"
            android:layout_marginLeft="@dimen/player_first_text_view_marginL"
            android:layout_marginStart="@dimen/player_first_text_view_marginL"
            android:layout_marginTop="@dimen/player_first_text_view_marginT" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:contentDescription="@string/browse_album_description"
            android:src="@drawable/kendrick" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/current_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/player_song_text_view_margin"
                android:text="@string/player_song_name"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/current_artist"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/player_album_text_view_margin"
                android:textAlignment="center"
                android:text="@string/player_album_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/player_divider_text_view_marginT"
                android:layout_marginLeft="@dimen/player_divider_text_view_marginL"
                android:layout_marginStart="@dimen/player_divider_text_view_marginL"
                android:layout_marginRight="@dimen/player_divider_text_view_marginR"
                android:layout_marginEnd="@dimen/player_divider_text_view_marginR"
                android:background="#000000" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/player_button_linear_layout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/player_button_margin"
                android:layout_marginStart="@dimen/player_button_margin"
                android:text="@string/player_button1"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_button2"
                android:layout_marginLeft="@dimen/player_button_margin"
                android:layout_marginStart="@dimen/player_button_margin"
                tools:ignore="ButtonStyle" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/player_button_margin"
                android:layout_marginStart="@dimen/player_button_margin"
                android:text="@string/player_button3"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/library_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/library_button_margin"
        android:layout_marginStart="@dimen/library_button_margin"
        android:text="@string/player_toolbar_button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/library_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/library_button_margin"
        android:layout_marginRight="@dimen/library_button_margin"
        android:text="@string/player_toolbar_button2" />
</RelativeLayout>